
Changes to functions:
* Predictor grouping with argument `group.pred` now also works for `sjt.lmer` and `sjt.glmer` (in certain cases may be buggy, so `group.pred` defaults to `FALSE`).
* Argument `vars` in `sjp.lmer` and `sjp.glmer` now also applies when plotting estimates (`type = "fe"` or `type = "re"`).
* `view_df_` gets a `weightBy` argument.
* Minor improvements to `view_df`, `sjp.lm` and `sjp.lmm`.
* Improved accuracy of computation of skewness value in `sjt.itemanalysis`.

Bug fixes:
* Fixed bug where in certain cases, ordered factors were not labelled correctly in `sjp.frq`.
* Axis labels were reversed in `sjp.pca` for `type = "bar"`.

Version 1.8.3
-----------------------------------------------------------------------------
New functions:
* `sjp.gpt` to plot grouped proportional tables.
* `save_plot` as convenient function to save the last ggplot-figure in high quality for publication.

Changes to functions:
* `sjp.lmm` can now also plot standardized estimates.
* `sjp.lm`, `sjp.lmm` and `sjt.lm` can now plot standardized estimates, where standardization is computed following Gelman's approach by dividing estimates by two standard deviations.
* Added parameters `ci.hyphen` and `minus.sign` to `sjt.lm`, `sjt.glm`, `sjt.lmer` and `sjt.glmer` to set specific symbols or HTML entitities for hyphens and minus signs of negative numbers.
* Added `type = 'coeff'` to `sjp.lmer` to plot joint random and fixed effects coefficients.
* `sjp.lm`, `sjp.glm`, `sjp.lmm`, `sjp.glmm`, `sjp.lmer` and `sjp.glmer` get a `remove.estimates` argument to remove specific estimates from the plot output.
* `type = 'poly'` in `sjp.lm` can now deal with fitted models that either use polynomials with `poly` or splines with `bs`.
* `sjt.df` gets a `big.mark` parameter to add thousands-separators if parameter `describe = TRUE`.
* `sjt.df` and `view_df` now recognize Date and POSIX-classes, if `showType = TRUE`.